--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-remark-images": "^3.3.8",
     "gatsby-source-filesystem": "^2.1.8",
+    "gatsby-theme-tailwindcss": "^1.1.0",
     "gatsby-transformer-sharp": "^2.2.5",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
