--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mdx-js/mdx": "^1.6.4",
     "@mdx-js/react": "^1.6.4",
     "gatsby": "^2.13.50",
+    "gatsby-background-image-es5": "^1.1.1",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-mdx": "^1.2.12",
